css: fix thumbnail width on Firefox (Desktop)

--- a/webroot/styles/main.css
+++ b/webroot/styles/main.css
@@ -178,8 +178,8 @@ a:focus {
 	width: 230px;
 	max-width: 230px;
 	max-height: 230px;
-
 	margin-right: 12px;
+	flex: 0 0 auto;
 }
 
 .items .name {
